# lib/api-spec/openapi.yaml
@@ -52,6 +52,16 @@ paths:
           required: false
           schema:
             type: string
+        - name: newest
+          in: query
+          required: false
+          schema:
+            type: boolean
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         "200":
           description: List of products
